force-app/main/default/objects/ATIS__c/ATIS__c.object-meta.xml
<CustomObject>
    <label>ATIS</label>
    <nameField>
        <displayFormat>ATIS-{00000}</displayFormat>
        <label>ATIS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>