force-app/main/default/objects/ATIS__c/fields/Original_Intent__c.field-meta.xml
<CustomField>
    <fullName>Original_Intent__c</fullName>
    <label>Original Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>