force-app/main/default/objects/ATIS__c/fields/Predicted_Intent__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Intent__c</fullName>
    <label>Predicted Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>