force-app/main/default/objects/ATIS__c/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <label>Utterance</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>