force-app/main/default/objects/ATIS__c/listViews/ALL_Utterances.listView-meta.xml
<ListView>
    <fullName>ALL_Utterances</fullName>
    <columns>Utterance__c</columns>
    <columns>Original_Intent__c</columns>
    <columns>Predicted_Intent__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Utterances</label>
</ListView>